# sabacc

./: .gitignore  .ocamlformat  .projections.json  README.md  dune-project  justfile  sabacc.opam
lib/: action.ml  card.ml  deck.ml  dune  game.ml  hand.ml  location.ml  player.ml  players.ml  rank.ml  sabacc.ml  suite.ml  utils.ml
test/: Game_test.ml  Helpers.ml  Sabacc_test.ml  dune
tests/: Sabacc_test.ml  dune  helpers.ml
