; This Source Code Form is subject to the terms of the Mozilla Public
; License, v. 2.0. If a copy of the MPL was not distributed with this
; file, You can obtain one at https://mozilla.org/MPL/2.0/.

(library
 (name sabacc)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq))
 (libraries
  ; external
  range
  pvec
  unix))
