; This Source Code Form is subject to the terms of the Mozilla Public
; License, v. 2.0. If a copy of the MPL was not distributed with this
; file, You can obtain one at https://mozilla.org/MPL/2.0/.

(tests
 (names sabacc_test)
 (modules sabacc_test game_test helpers)
 (libraries sabacc alcotest testo))

(env
 (dev
  (flags
   (:standard -w -33))))
